# p2pocket

./: .gitignore  2  CMakeLists.txt  LICENSE  README.md  bootstrap.cpp  debug.cpp  debug.h  main.cpp  tmux.sh
include/: CMakeLists.txt  config.h  context.h  crypto.h  hello.h  id.h  interface.h  networking.h  routing_table.h  storage.h  timer.h  types.h
include/kademlia/: CMakeLists.txt  kademlia.h  message.h
include/storage/: storage.h
src/: CMakeLists.txt  client.cpp  crypto.cpp  hello.cpp  id.cpp  interface.cpp  main.cpp  networking.cpp  routing_table.cpp  server.cpp  storage.cpp  timer.cpp  types.cpp
src/kademlia/: CMakeLists.txt  message.cpp
